    values into the context used when rendering an HTML template.

  - Document metadata is now in the default template context, under
    the name `metadata`.

  - The new config value `html_favicon` can be used to set a favicon
    for the HTML output.  Thanks to Sebastian Wiesner.

  - The new config value `html_use_index` can be used to switch index
    generation in HTML documents off.

  - The new config value `html_short_title` can be used to set a
    shorter title for the documentation which is then used in the
    navigation bar.

  - The new config value `html_show_sphinx` can be used to control
    whether a link to Sphinx is added to the HTML footer.

  - The new config value `html_file_suffix` can be used to set the
    HTML file suffix to e.g. ``.xhtml``.

  - The directories in the `html_static_path` can now contain
    subdirectories.

* The image directive now supports specifying the extension as ``.*``,
  which makes the builder select the one that matches best.

* The new config value `exclude_trees` can be used to exclude whole
  subtrees from the search for source files.  Thanks to Sebastian
  Wiesner.

* Defaults for configuration values can now be callables, which allows
  dynamic defaults.

* The new TextBuilder creates plain-text output.

* Extensions:
    
  - The `autodoc` extension accepts signatures for functions, methods
    and classes now that override the signature got via introspection
    from Python code.

Bugs fixed
----------

* Correctly report the source location for docstrings included with
  autodoc.

* Fix the LaTeX output of description units with multiple signatures.

* Handle the figure directive in LaTeX output.

* Handle raw admonitions in LaTeX output.

* Fix determination of the title in HTML help output.

* Handle project names containing spaces.

* Don't write SSI-like comments in HTML output.

* Rename the "sidebar" class to "sphinxsidebar" in order to stay different
  from reST sidebars.
