@@ -8,7 +8,6 @@ Sphinx
 - range and object options for literalinclude
 - option for compact module index
 - HTML section numbers?
-- split the general index?
 - "seealso" links to external examples, see http://svn.python.org/projects/sandbox/trunk/seealso/ and http://effbot.org/zone/idea-seealso.htm
 - "often used" combo box in sidebar
 - source file cross-references?
