@@ -59,6 +59,7 @@ class Config(object):
         html_additional_pages = ({}, False),
         html_use_modindex = (True, False),
         html_use_index = (True, False),
+        html_split_index = (False, False),
         html_copy_source = (True, False),
         html_use_opensearch = ('', False),
         html_file_suffix = (None, False),
